Fixed title alignment on monitor screen size

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ ol {
     }
 
     .title {
-        padding-left: 19%;
+        padding-left: 18.25%;
         font-size: 40px;
     }
 
